# trashed

./: .gitignore  Cargo.toml
src/: main.rs
