[package]
name = "trash-cli"
description = "Cross-Platform, lightweight command line interface to the trashcan"
version = "1.0.0"
edition = "2021"
authors = ["Juliette Cordor <grassojames5@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jewlexx/trash-cli"
homepage = "https://github.com/jewlexx/trash-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
dunce = "1.0.2"
human-panic = "1.0.3"
trash = { version = "2.1.5", features = ["coinit_multithreaded"] }

[[bin]]
name = "trash"
path = "src/main.rs"