[package]
name = "trashed"
description = "Cross-Platform, lightweight command line interface to the trashcan"
version = "1.0.0"
edition = "2021"
authors = ["Juliette Cordor <grassojames5@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jewlexx/trashed"
homepage = "https://github.com/jewlexx/trashed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
dunce = "1.0.3"
human-panic = "1.0.3"
indicatif = { version = "0.17.2", features = ["rayon"] }
rayon = "1.5.3"
regex = "1.7.0"
trash = { version = "2.1.5", features = ["coinit_multithreaded"] }

[[bin]]
name = "trash"
path = "src/main.rs"
